August_30/August_30/src/objects/Projects__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for 'Internal Project' record type only. It is created for reporting purpose, specifically for 'Resource Gap per Month' where we need to show Internal Projects that are active and External Projects that are not yet Active (External projects in various Opportunity Stages).</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <formula>TODAY() -  Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allegis_SF_Opportunity_ID__c</fullName>
        <label>Allegis SF Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activision Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Intelligrated</fullName>
                </value>
                <value>
                    <fullName>Mobile Mini</fullName>
                </value>
                <value>
                    <fullName>P&amp;G</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>T.Rowe Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Billing_Address__c</fullName>
        <formula>Account_Name__r.BillingStreet &amp; BR() &amp;  Account_Name__r.BillingCity &amp; BR() &amp; Account_Name__r.BillingState &amp; BR() &amp;  Account_Name__r.BillingPostalCode &amp; BR() &amp; Account_Name__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor_Email__c</fullName>
        <label>Customer Executive Sponsor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor_First_Name__c</fullName>
        <label>Customer Executive Sponsor First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor_Last_Name__c</fullName>
        <label>Customer Executive Sponsor Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SFDC_Admin_Email__c</fullName>
        <label>Customer SFDC Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_SFDC_Admin_First_Name__c</fullName>
        <label>Customer SFDC Admin First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SFDC_Admin_Last_Name__c</fullName>
        <label>Customer SFDC Admin Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Address__c</fullName>
        <formula>Account_Name__r.ShippingStreet &amp; BR() &amp; Account_Name__r.ShippingCity &amp; BR() &amp; Account_Name__r.ShippingState &amp; BR() &amp; Account_Name__r.ShippingPostalCode &amp; BR() &amp;  Account_Name__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Service Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Manager_GDP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Manager (GDP)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Delivery Manager (GDP))</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Life_Cycle_Phase__c</fullName>
        <label>Engagement Life Cycle Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDP_ID__c</fullName>
        <label>GDP ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDP_Project_Name__c</fullName>
        <label>GDP Project Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDP_Site__c</fullName>
        <label>GDP Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Global_Delivery_Manager_GDP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Delivery Manager (GDP)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Global Delivery Manager (GDP))</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>India_Resource_Roles__c</fullName>
        <label>India Resource Roles</label>
        <summaryFilterItems>
            <field>Role__c.Role_Location__c</field>
            <operation>notEqual</operation>
            <value>Not Specified, USA</value>
        </summaryFilterItems>
        <summaryForeignKey>Role__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSG_BOA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSG BOA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (OSG BOA)</relationshipLabel>
        <relationshipName>Projects8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSG_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSG POA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (OSG POA)</relationshipLabel>
        <relationshipName>Projects7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMLC_Stage__c</fullName>
        <label>PMLC Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSID__c</fullName>
        <label>PSID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Project_Health__c</fullName>
        <label>Partner Portal Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Track</fullName>
                </value>
                <value>
                    <fullName>At-Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Portal_Project_Status__c</fullName>
        <label>Partner Portal Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase Role</label>
        <referenceTo>Phase_Role__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Lead_GDP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Lead (GDP)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Practice Lead (GDP))</relationshipLabel>
        <relationshipName>Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Manager_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Manager (Director)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Practice Manager (Director))</relationshipLabel>
        <relationshipName>Projects6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B Commerce (Cloud Craze)</fullName>
                </value>
                <value>
                    <fullName>B2C Commerce</fullName>
                </value>
                <value>
                    <fullName>Community Cloud</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev</fullName>
                </value>
                <value>
                    <fullName>Education Cloud</fullName>
                </value>
                <value>
                    <fullName>Einstein Analytics</fullName>
                </value>
                <value>
                    <fullName>Field Service Lightning</fullName>
                </value>
                <value>
                    <fullName>Financial Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Government Cloud</fullName>
                </value>
                <value>
                    <fullName>Health Cloud</fullName>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>IoT Cloud / Thunder</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Mobile Custom App Dev</fullName>
                </value>
                <value>
                    <fullName>Mulesoft</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>PDO: AppExchange App Development</fullName>
                </value>
                <value>
                    <fullName>Salesforce CPQ</fullName>
                </value>
                <value>
                    <fullName>Salesforce Industry Products</fullName>
                </value>
                <value>
                    <fullName>Salesforce.org (Foundation)</fullName>
                </value>
                <value>
                    <fullName>Salesforce.org Education Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce.org Nonprofit Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud - Einstein</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud - CTI</fullName>
                </value>
                <value>
                    <fullName>Service Cloud - Knowledge Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Duration_Weeks__c</fullName>
        <description>Sum of Phase Duration in Weeks</description>
        <label>Project Duration (Weeks)</label>
        <summarizedField>Project_Phase__c.Phase_Duration_Weeks__c</summarizedField>
        <summaryForeignKey>Project_Phase__c.Project_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <formula>(Project_Start_Date__c) + ( Project_Duration_Weeks__c ) * 7</formula>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager_GDP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager (GDP)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Manager (GDP))</relationshipLabel>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>Project_Phase__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Opportunity – Qualification</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Opportunity – Pursue</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Bid</fullName>
                </value>
                <value>
                    <fullName>Opportunity – Negotiation</fullName>
                </value>
                <value>
                    <fullName>Opportunity – Closed Won</fullName>
                </value>
                <value>
                    <fullName>Opportunity – Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Closed No Pursue</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Closed No Bid</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Closed Wash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDLC_Stage__c</fullName>
        <label>SDLC Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Project_Id__c</fullName>
        <label>SF Project Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMP_Site__c</fullName>
        <label>SMP Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Send_Survey_To__c</fullName>
        <label>Send Survey To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Customer System Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Delivery Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Service Delivery Manager)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <label>Service Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Site</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <label>Survey Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Not Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <label>Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Service Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Technical Service Manager)</relationshipLabel>
        <relationshipName>ProjectsToContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>US_Resource_Roles__c</fullName>
        <label>US Resource Roles</label>
        <summaryFilterItems>
            <field>Role__c.Role_Location__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </summaryFilterItems>
        <summaryForeignKey>Role__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Projects__c.External_Project</value>
        </filters>
        <label>Active External (Billable) Projects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>All_External_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Project_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Projects__c.External_Project</value>
        </filters>
        <label>All External Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Internal_Projects</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Project_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Projects__c.Internal_Project</value>
        </filters>
        <label>All Internal Projects</label>
    </listViews>
    <listViews>
        <fullName>Closed_Projects</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Closed Projects</label>
    </listViews>
    <listViews>
        <fullName>X2019_External_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Projects__c.External_Project</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Opportunity – Qualification,Opportunity – Pursue,Opportunity - Bid,Opportunity – Negotiation</value>
        </filters>
        <label>Upcoming External Projects</label>
    </listViews>
    <recordTypes>
        <fullName>External_Project</fullName>
        <active>true</active>
        <description>Customer billable projects</description>
        <label>External Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Project</fullName>
        <active>true</active>
        <description>Non-billable projects</description>
        <label>Internal Project</label>
    </recordTypes>
</CustomObject>